Removed bug with multiline annote

--- a/test_files/My Collection.bib
+++ b/test_files/My Collection.bib
@@ -25,3 +25,152 @@ abstract = {A quick introduction to Mendeley. Learn how Mendeley creates your pe
 url = {http://www.mendeley.com},
 year = {2011}
 }
+
+@inproceedings{Chen2012,
+abstract = {It is a challenge to design a haptic device with a large workspace, high stiffness while maintain a good back drivability. In this paper, we present a large-scale haptic device iFeel6BH1500, which is based on a cable-driven parallel mechanism and can achieve 6 dimensional force feedback by controlling the tension of eight cables. The components and working principle of the device is presented, followed by the analysis of the statics and kinematic models. Moreover, a method of friction compensation is proposed to decrease the tension error for achieving good back drivability. The measurement results show that the tension error of the cables is greatly reduced by using the friction compensation. Finally, two demos for the application of iFeel6BH1500 are presented: virtual assembly of aircraft engine and virtual shooting for entertainment. The demos show the proposed device can provide large workspace, high stiffness and good back drivability.},
+address = {Tianjin, China},
+annote = {
+        From Duplicate 1 ( 
+        
+
+        
+          
+
+        
+        
+          iFeel6-BH1500: a large-scale 6-DOF haptic device
+        
+        
+          
+
+        
+        
+
+         - Chen, Zhongyuan; Zhang, Yaojun Yuru; Wang, Dangxiao; Li, Chaobin )
+
+          
+
+        
+        
+
+        
+
+        
+
+        
+
+        
+
+        From Duplicate 2 ( 
+        
+
+        
+
+        
+
+        
+
+        
+
+        
+          
+
+          
+
+          
+
+        
+        
+
+        
+          
+
+        
+        
+          iFeel6-BH1500: a large-scale 6-DOF haptic device
+        
+        
+          
+
+        
+        
+
+        
+          
+
+          
+
+          
+
+        
+        
+
+        
+
+        
+
+        
+
+        
+
+         - Chen, Zhongyuan; Zhang, Yuru; Wang, Dangxiao; Li, Chaobin; Zhang, Yaojun )
+
+          
+
+          
+
+          
+
+        
+        
+
+        
+
+        
+
+        
+
+        
+
+        
+
+        
+
+        
+
+        
+
+        
+
+        
+
+        
+
+        
+
+        
+
+        
+
+        
+
+        
+
+        
+
+        
+
+      },
+author = {Chen, Zhongyuan and Zhang, Yuru and Wang, Dangxiao and Li, Chaobin and Zhang, Yaojun},
+booktitle = {2012 IEEE International Conference on Virtual Environments Human-Computer Interfaces and Measurement Systems (VECIMS) Proceedings},
+doi = {10.1109/VECIMS.2012.6273226},
+file = {:C$\backslash$:/Users/alfoc/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Chen et al. - 2012 - iFeel6-BH1500 a large-scale 6-DOF haptic device(2).pdf:pdf},
+isbn = {978-1-4577-1759-8},
+keywords = {-cable driven,6 dimensional force,although cable-driven hap tic,cables (mechanical),device has been studied,feedback,for,haptic interfaces,large-scale,or measure the back,several years,the method to analyze,virtual reality},
+month = jul,
+pages = {121--125},
+publisher = {IEEE},
+title = {{iFeel6-BH1500: A large-scale 6-DOF haptic device}},
+url = {http://ieeexplore.ieee.org/xpls/abs\_all.jsp?arnumber=6273226 http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=6273226},
+year = {2012}
+}
