--- a/test_files/My Collection2.bib
+++ b/test_files/My Collection2.bib
@@ -21,3 +21,17 @@ abstract = {A quick introduction to Mendeley. Learn how Mendeley creates your pe
 url = {http://www.mendeley.com},
 year = {2011}
 }
+
+@inproceedings{Chen2012,
+address = {Tianjin, China},
+author = {Chen, Zhongyuan and Zhang, Yuru and Wang, Dangxiao and Li, Chaobin and Zhang, Yaojun},
+booktitle = {2012 IEEE International Conference on Virtual Environments Human-Computer Interfaces and Measurement Systems (VECIMS) Proceedings},
+doi = {10.1109/VECIMS.2012.6273226},
+isbn = {978-1-4577-1759-8},
+keywords = {-cable driven,6 dimensional force,although cable-driven hap tic,cables (mechanical),device has been studied,feedback,for,haptic interfaces,large-scale,or measure the back,several years,the method to analyze,virtual reality},
+month = jul,
+pages = {121--125},
+publisher = {IEEE},
+title = {{iFeel6-BH1500: A large-scale 6-DOF haptic device}},
+url = {http://ieeexplore.ieee.org/xpls/abs\_all.jsp?arnumber=6273226 http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=6273226},
+}
